--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -20,13 +20,13 @@
    "source": [
     "| Variable | Definition | Key |\n",
     "| ----------- | ----------- | ----------- |\n",
-    "| PassengerId | Unique identifiers for the passengers |\n",
+    "| PassengerId | Unique identifiers for the passengers | |\n",
     "| survival | Survival | 0 = No, 1 = Yes|\n",
     "| pclass | Ticket class | 1 = 1st, 2 = 2nd, 3 = 3rd|\n",
     "| sex | Sex | |\n",
     "| Age | Age in years| |\n",
-    "| sibsp | # of siblings / spouses aboard the Titanic|\n",
-    "|parch|\t# of parents / children aboard the Titanic|\n",
+    "| sibsp | # of siblings / spouses aboard the Titanic| |\n",
+    "|parch|\t# of parents / children aboard the Titanic| |\n",
     "|ticket| Ticket number| |\n",
     "|fare| Passenger fare| |\n",
     "|cabin|\tCabin number| |\n",
@@ -5061,360 +5061,4 @@
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th>Survived</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>892</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>893</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>894</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>895</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>896</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>413</th>\n",
-       "      <td>1305</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>414</th>\n",
-       "      <td>1306</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>415</th>\n",
-       "      <td>1307</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>416</th>\n",
-       "      <td>1308</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>417</th>\n",
-       "      <td>1309</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>418 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     PassengerId  Survived\n",
-       "0            892         0\n",
-       "1            893         0\n",
-       "2            894         0\n",
-       "3            895         0\n",
-       "4            896         1\n",
-       "..           ...       ...\n",
-       "413         1305         0\n",
-       "414         1306         1\n",
-       "415         1307         0\n",
-       "416         1308         0\n",
-       "417         1309         1\n",
-       "\n",
-       "[418 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "submission"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Submission.csv\n",
-    "submission.to_csv('submission.csv',index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Appendix"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Tables for README.md"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "|    |   PassengerId |   Survived |   Pclass | Name                                                | Sex    |   Age |   SibSp |   Parch | Ticket           |    Fare | Cabin   | Embarked   |\n",
-      "|---:|--------------:|-----------:|---------:|:----------------------------------------------------|:-------|------:|--------:|--------:|:-----------------|--------:|:--------|:-----------|\n",
-      "|  0 |             1 |          0 |        3 | Braund, Mr. Owen Harris                             | male   |    22 |       1 |       0 | A/5 21171        |  7.25   | nan     | S          |\n",
-      "|  1 |             2 |          1 |        1 | Cumings, Mrs. John Bradley (Florence Briggs Thayer) | female |    38 |       1 |       0 | PC 17599         | 71.2833 | C85     | C          |\n",
-      "|  2 |             3 |          1 |        3 | Heikkinen, Miss. Laina                              | female |    26 |       0 |       0 | STON/O2. 3101282 |  7.925  | nan     | S          |\n",
-      "|  3 |             4 |          1 |        1 | Futrelle, Mrs. Jacques Heath (Lily May Peel)        | female |    35 |       1 |       0 | 113803           | 53.1    | C123    | S          |\n",
-      "|  4 |             5 |          0 |        3 | Allen, Mr. William Henry                            | male   |    35 |       0 |       0 | 373450           |  8.05   | nan     | S          |\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Preview of train_data\n",
-    "original_train_data = load_file(\"train.csv\")\n",
-    "print(original_train_data.head().to_markdown())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "|        | Name                                           | Sex   |   Ticket | Cabin   | Embarked   |\n",
-      "|:-------|:-----------------------------------------------|:------|---------:|:--------|:-----------|\n",
-      "| count  | 891                                            | 891   |      891 | 204     | 889        |\n",
-      "| unique | 891                                            | 2     |      681 | 147     | 3          |\n",
-      "| top    | Rothschild, Mrs. Martin (Elizabeth L. Barrett) | male  |   347082 | B96 B98 | S          |\n",
-      "| freq   | 1                                              | 577   |        7 | 4       | 644        |\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Descriptive statistics, 'object' variables from train_data\n",
-    "print(original_train_data.describe(include='object').to_markdown())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "|       |   PassengerId |   Survived |     Pclass |      SibSp |      Parch |\n",
-      "|:------|--------------:|-----------:|-----------:|-----------:|-----------:|\n",
-      "| count |       891     | 891        | 891        | 891        | 891        |\n",
-      "| mean  |       446     |   0.383838 |   2.30864  |   0.523008 |   0.381594 |\n",
-      "| std   |       257.354 |   0.486592 |   0.836071 |   1.10274  |   0.806057 |\n",
-      "| min   |         1     |   0        |   1        |   0        |   0        |\n",
-      "| 25%   |       223.5   |   0        |   2        |   0        |   0        |\n",
-      "| 50%   |       446     |   0        |   3        |   0        |   0        |\n",
-      "| 75%   |       668.5   |   1        |   3        |   1        |   0        |\n",
-      "| max   |       891     |   1        |   3        |   8        |   6        |\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Descriptive statistics, 'integer' variables from train_data\n",
-    "print(original_train_data.describe(include='int64').to_markdown())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "|       |      Age |     Fare |\n",
-      "|:------|---------:|---------:|\n",
-      "| count | 714      | 891      |\n",
-      "| mean  |  29.6991 |  32.2042 |\n",
-      "| std   |  14.5265 |  49.6934 |\n",
-      "| min   |   0.42   |   0      |\n",
-      "| 25%   |  20.125  |   7.9104 |\n",
-      "| 50%   |  28      |  14.4542 |\n",
-      "| 75%   |  38      |  31      |\n",
-      "| max   |  80      | 512.329  |\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Descriptive statistics, 'float' variables from train_data\n",
-    "print(original_train_data.describe(include='float64').to_markdown())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "|    |       Age |      Fare |   Pclass_2 |   Pclass_3 |   Sex_male |   SibSp_1 |   SibSp_2 |   SibSp_3 |   SibSp_4 |   SibSp_4+ |   Parch_1 |   Parch_2 |   Parch_2+ |   Embarked_Q |   Embarked_S |\n",
-      "|---:|----------:|----------:|-----------:|-----------:|-----------:|----------:|----------:|----------:|----------:|-----------:|----------:|----------:|-----------:|-------------:|-------------:|\n",
-      "|  0 | -0.530772 | -0.566959 |          0 |          1 |          1 |         1 |         0 |         0 |         0 |          0 |         0 |         0 |          0 |            0 |            1 |\n",
-      "|  1 |  0.658943 |  0.989016 |          0 |          0 |          0 |         1 |         0 |         0 |         0 |          0 |         0 |         0 |          0 |            0 |            0 |\n",
-      "|  2 | -0.233343 | -0.550557 |          0 |          1 |          0 |         0 |         0 |         0 |         0 |          0 |         0 |         0 |          0 |            0 |            1 |\n",
-      "|  3 |  0.435871 |  0.547171 |          0 |          0 |          0 |         1 |         0 |         0 |         0 |          0 |         0 |         0 |          0 |            0 |            1 |\n",
-      "|  4 |  0.435871 | -0.547519 |          0 |          1 |          1 |         0 |         0 |         0 |         0 |          0 |         0 |         0 |          0 |            0 |            1 |\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Preview of feature dataset used after: \n",
-    "#- Dropping irrelevant columns: PassengerId, Name, Ticket and Cabin\n",
-    "#- Standardised Age and Fare\n",
-    "#- Dummy variables for Pclass, Sex, SibSp, Parch and Embarked \n",
-    "print(feature_df.head().to_markdown())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "|                            |   Accuracy |\n",
-      "|:---------------------------|-----------:|\n",
-      "| GradientBoostingClassifier |   0.815318 |\n",
-      "| SVC                        |   0.810842 |\n",
-      "| RandomForestClassifier     |   0.805193 |\n",
-      "| LogisticRegression         |   0.80405  |\n",
-      "| KNeighborsClassifier       |   0.784955 |\n",
-      "| DecisionTreeClassifier     |   0.778157 |\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Vanilla model scores\n",
-    "print(scores_sorted.to_markdown())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "|                                 | models                                      | parameters                                                                                                                                   |\n",
-      "|:--------------------------------|:--------------------------------------------|:---------------------------------------------------------------------------------------------------------------------------------------------|\n",
-      "| ('KNeighborsClassifier',)       | KNeighborsClassifier()                      | {'n_neighbors': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]}                                                                                             |\n",
-      "| ('DecisionTreeClassifier',)     | DecisionTreeClassifier(random_state=42)     | {'max_depth': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]}                                                                                               |\n",
-      "| ('LogisticRegression',)         | LogisticRegression(random_state=42)         | {'C': [0.0001, 0.001, 0.1, 1, 10, 50, 100]}                                                                                                  |\n",
-      "| ('SVC',)                        | SVC(random_state=42)                        | {'C': [0.0001, 0.001, 0.1, 1, 10, 50, 100], 'kernel': ['linear', 'rbf']}                                                                     |\n",
-      "| ('RandomForestClassifier',)     | RandomForestClassifier(random_state=42)     | {'n_estimators': [50, 100, 150, 200], 'max_depth': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]}                                                          |\n",
-      "| ('GradientBoostingClassifier',) | GradientBoostingClassifier(random_state=42) | {'n_estimators': [50, 100, 150, 200], 'max_depth': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10], 'learning_rate': [0.0001, 0.001, 0.01, 0.1, 1, 10, 100]} |\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Tuning hyperparameters\n",
-    "print(parameter_df.to_markdown())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "|                            | Best_model_params                                            |   Best_model_score |\n",
-      "|:---------------------------|:-------------------------------------------------------------|-------------------:|\n",
-      "| GradientBoostingClassifier | {'learning_rate': 0.01, 'max_depth': 6, 'n_estimators': 150} |           0.832203 |\n",
-      "| RandomForestClassifier     | {'max_depth': 5, 'n_estimators': 200}                        |           0.82882  |\n",
-      "| DecisionTreeClassifier     | {'max_depth': 4}                                             |           0.818701 |\n",
-      "| LogisticRegression         | {'C': 100}                                                   |           0.814188 |\n",
-      "| SVC                        | {'C': 1, 'kernel': 'rbf'}                                    |           0.810842 |\n",
-      "| KNeighborsClassifier       | {'n_neighbors': 3}                                           |           0.790599 |\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Accuracy scores from the best models from each model type\n",
-    "print(Best_models_sorted.to_markdown())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.3"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
-}
+       "    <tr style=\"text-align: right;\">\n
